@@ -123,3 +123,5 @@ graph.ConfigureNonDbConstraintController.noNameMsg=The constraint must have a na
 graph.DndHandler.dndMessage=To create a non DB constraint using drag and drop hold down the control key. Then right click the constraint to configure it.
 
 graph.ConfigureNonDbConstraintDlg.NonDbConstraintHint=Note: For most RDBMSes you will only be able to create this constraint in the DB if the constraint references all (and only) PK colums.
+
+graph.showThisConstraintName=show this constraint name
